// |_____/ \__|\__, |_|_|_| |_|\__, |_|  |_|  \__,_|_| |_| |_|\___| \_/\_/ \___/|_|  |_|\_\
//              __/ |           __/ |                                                      
//             |___/           |___/                                                       
//
// RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES RELEASENOTES

VERSION OF 02-02-2023
---------------------
1) StyleListBox now knows how to sort it's items
2) Header control of StyleListBox fixed. Also works in the 'Dark Theme'
3) ListBoxes need no longer to be OWNERDRAWFIXED. Regular listboxes from the 
   standard resources will now work exactly the same

VERSION OF 21-01-2023
---------------------
1) Added the StyleTab for replacament of StyleDialog in a Tab-control
2) Added the setting of an environment variable in RegistryManager
3) Re-work on the WinToast to be able to supply standard MBCS strings
4) Expansion of the StyleDialog to provide standard methods for things normally
   generated in the MFC wizards
   - SetAboutBoxAndIcon
   - OnQueryDragIcon
   - IsIconic painting in the OnPaint

VERSION OF 11-09-2022
---------------------
1) Added percentage to the StyleProgressCtrl
2) Added a StyleStatic for the CStatic (Old StyleStatic is renamed to StyleStaticToast)
3) The initial DPI of the application will be detected automatically

VERSION OF 21-07-2022
---------------------
1) Closing of paint-resize bugs
2) Closing of the StyleMessageBox bugs
3) Closing of DEL/BACKSPACE keys issue of StyleEdit

VERSION OF 05-03-2022
---------------------
1) The 'base version' of the new 'Dark mode'
   Work needs still to be done on various controls (StyleListCtrl & StyleTabCtrl)
   This is a very good example of what dark-mode will look like

VERSION OF 04-12-2021
---------------------
1) Updated to VS2022
2) Better handling of the default button in a StyleMessageBox

VERSION OF 10-08-2021
---------------------